// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel renders error for missing query param 1`] = `
<div
  className="giphy__result--error"
>
  <img
    alt="kitten save them all GIF by Best Friends Animal Society"
    className="giphy__gif"
    src="/images/error.gif"
  />
  You need to type something to search!
</div>
`;

exports[`Panel renders general error 1`] = `
<div
  className="giphy__result--error"
>
  <img
    alt="kitten save them all GIF by Best Friends Animal Society"
    className="giphy__gif"
    src="/images/error.gif"
  />
  Oh no! Something went wrong when fetching the GIFs :(
  <button
    className="error__reload"
    onClick={[MockFunction]}
  >
    Click here to try again
  </button>
</div>
`;

exports[`Panel renders gif 1`] = `
<div
  className="giphy__result"
>
  <div
    className="giphy__result--gifs"
  >
    <picture
      className="giphy__gif"
    >
      <source
        srcSet="https://media1.giphy.com/media/Qem49y6xGw57W/giphy.webp?cid=18ba804ef5184d09da45836fd662f765ca0cd75cf97af788&rid=giphy.webp"
        type="image/webp"
      />
      <source
        media="(max-width: 680px)"
        srcSet="https://media1.giphy.com/media/Qem49y6xGw57W/giphy-downsized-medium.gif?cid=18ba804ef5184d09da45836fd662f765ca0cd75cf97af788&rid=giphy-downsized-medium.gif"
      />
      <img
        height="465"
        src="https://media1.giphy.com/media/Qem49y6xGw57W/giphy.gif?cid=18ba804ef5184d09da45836fd662f765ca0cd75cf97af788&rid=giphy.gif"
        width="478"
      />
    </picture>
  </div>
  <img
    alt="Loading"
    className="gifs__loading"
    src="/images/loading.svg"
  />
</div>
`;

exports[`Panel renders loading state 1`] = `
<div
  className="giphy__result--loading"
>
  <img
    alt="Loading"
    src="/images/loading.svg"
  />
</div>
`;
